samples/_failures_safe/1761647865_3564b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7925e2f0.c: In function ‘main’:
./samples/SAFE/__tmp_7925e2f0.c:199: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_7925e2f0.c:198:16: note: to match this ‘(’
  198 |         fprintf(stderr
      |                ^
./samples/SAFE/__tmp_7925e2f0.c:198:9: error: too few arguments to function ‘fprintf’
  198 |         fprintf(stderr
      |         ^~~~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_7925e2f0.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:77:1: note: declared here
   77 | fprintf (FILE *__restrict __stream, const char *__restrict __fmt, ...)
      | ^~~~~~~
./samples/SAFE/__tmp_7925e2f0.c:198:9: error: expected declaration or statement at end of input
  198 |         fprintf(stderr
      |         ^~~~~~~
./samples/SAFE/__tmp_7925e2f0.c:198:9: error: expected declaration or statement at end of input
